:feat: BEM implementation

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     -->
     <header class="header">
-      <img class="header-img" src="assets/logo/ohmyfood.png" />
+      <img class="header__img" src="assets/logo/ohmyfood.png" />
     </header>
     <main>
       <!--
