--- a/restaurants/la_palette_du_gout.html
+++ b/restaurants/la_palette_du_gout.html
@@ -28,33 +28,33 @@
 
     -->
     <header class="header">
-      <a href="../index.html" class="header-back-a">
-        <i class="header-back-i fa-solid fa-arrow-left"></i>
+      <a href="../index.html" class="header__back-link">
+        <i class="header__back fa-solid fa-arrow-left"></i>
       </a>
-      <img class="header-img" src="../assets/logo/ohmyfood.png" />
+      <img class="header__img" src="../assets/logo/ohmyfood.png" />
     </header>
     <main>
       <main>
         <section class="menu">
-          <img class="section-menu-img" src="../assets/restaurants/la_palette_du_gout.jpg" alt="Image de nourriture" />
+          <img class="menu-card__img" src="../assets/restaurants/la_palette_du_gout.jpg" alt="Image de nourriture" />
           <div class="menu-container">
           <!--
 
                 Restaurant menu
 
           -->
-          <div class="menu-card-title-div">
-            <h2 class="menu-card-title-h2">La palette du gout</h2>
-            <i class="menu-card-heart-icon-i fa-regular fa-heart"></i>
-          </div> <!-- ./menu-card-title-div -->
+          <div class="menu-card__title-container">
+            <h2 class="menu-card__title">La palette du gout</h2>
+            <i class="menu-card__heart-icon fa-regular fa-heart"></i>
+          </div> <!-- ./.menu_conttainer__card-title -->
           <!--
 
               Restaurant menu category "" entrées ""
 
           -->
-          <div class="menu-card-category-div overall-restaurant-pres-margin">
+          <div class="category overall-restaurant-pres-margin">
             Entrées
-            <div class="menu-card-categ-line-div overall-restaurant-pres-margin"></div>
+            <div class="category__line  overall-restaurant-pres-margin"></div>
           </div> <!-- /.menu-card-category-div -->
 
           <!--
@@ -70,17 +70,17 @@
 
           <!-- First card part -->
           <div class="card-restaurant-container d-flex">
-            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
                         restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card-title-h3">Fricassée d'escargot</h3>
-              <p class="card-description">
+              <h3 class="card--restaurant__title">Fricassée d'escargot</h3>
+              <p class="card--restaurant__description">
                 Au piment d'espelette
               </p>
             </div> <!-- /.card -->
 
             <!-- Second card part -->
-            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card-price-p">25€</p>
+            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card--restaurant__price__text">25€</p>
             </div> <!-- /.card .card-price -->
 
             <!-- Third card part -->
@@ -95,15 +95,15 @@
 
           -->
           <div class="card-restaurant-container d-flex">
-            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
                         restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card-title-h3">Foie gras de canard mi-cuit</h3>
-              <p class="card-description">
+              <h3 class="card--restaurant__title">Foie gras de canard mi-cuit</h3>
+              <p class="card--restaurant__description">
                 Et ses copeaux de truffe noire
               </p>
             </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card-price-p">35€</p>
+            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card--restaurant__price__text">35€</p>
             </div> <!-- /.card .card-price -->
             <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -115,16 +115,16 @@
               Card #3 - Oeuf au plat
 
           -->
-          <div class="card-restaurant-container d-flex">
-            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+          <div class="card-restaurant-container card--restaurant-mrg-btm d-flex">
+            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
                         restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card-title-h3">Oeuf au plat</h3>
-              <p class="card-description">
+              <h3 class="card--restaurant__title">Oeuf au plat</h3>
+              <p class="card--restaurant__description">
                 Assaisonné à la truffe sur lit de crême
               </p>
             </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card-price-p">20€</p>
+            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card--restaurant__price__text">20€</p>
             </div> <!-- /.card .card-price -->
             <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -136,9 +136,9 @@
               Restaurant menu category "" plats ""
 
           -->
-          <div class="menu-card-category-div overall-restaurant-pres-margin">
+          <div class="category overall-restaurant-pres-margin">
             Plats
-            <div class="menu-card-categ-line-div overall-restaurant-pres-margin"></div>
+            <div class="category__line overall-restaurant-pres-margin"></div>
           </div> <!-- /.menu-card-category-div -->
 
           <!--
@@ -147,15 +147,15 @@
 
           -->
           <div class="card-restaurant-container d-flex">
-            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
                         restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card-title-h3">Filet de beauf aux herbes</h3>
-              <p class="card-description">
+              <h3 class="card--restaurant__title">Filet de beauf aux herbes</h3>
+              <p class="card--restaurant__description">
                 Accompagné de sa ribambelle de légumes
               </p>
             </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card-price-p">20€</p>
+            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card--restaurant__price__text">20€</p>
             </div> <!-- /.card .card-price -->
             <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -168,15 +168,15 @@
 
           -->
           <div class="card-restaurant-container d-flex">
-            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
                         restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card-title-h3">Parmentier de queue de boeuf</h3>
-              <p class="card-description">
+              <h3 class="card--restaurant__title">Parmentier de queue de boeuf</h3>
+              <p class="card--restaurant__description">
                 Accompagné de sa ribambelle de légumes
               </p>
             </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card-price-p">20€</p>
+            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card--restaurant__price__text">20€</p>
             </div> <!-- /.card .card-price -->
             <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -188,16 +188,16 @@
               Card #3 - Filet de turbot
 
           -->
-          <div class="card-restaurant-container d-flex">
-            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+          <div class="card-restaurant-container card--restaurant-mrg-btm d-flex">
+            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
                         restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card-title-h3">Filet de Turbot</h3>
-              <p class="card-description">
+              <h3 class="card--restaurant__title">Filet de Turbot</h3>
+              <p class="card--restaurant__description">
                 Aux agrumes
               </p>
             </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card-price-p">44€</p>
+            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card--restaurant__price__text">44€</p>
             </div> <!-- /.card .card-price -->
             <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -209,9 +209,9 @@
               Restaurant menu category "" Desserts ""
 
           -->
-          <div class="menu-card-category-div overall-restaurant-pres-margin">
+          <div class="category overall-restaurant-pres-margin">
             Desserts
-            <div class="menu-card-categ-line-div overall-restaurant-pres-margin"></div>
+            <div class="category__line overall-restaurant-pres-margin"></div>
           </div> <!-- /.menu-card-category-div -->
 
 
@@ -223,13 +223,13 @@
           <div class="card-restaurant-container d-flex">
             <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
                         restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card-title-h3">Paris-Brest</h3>
-              <p class="card-description">
+              <h3 class="card--restaurant__title">Paris-Brest</h3>
+              <p class="card--restaurant__description">
                 Revisité
               </p>
             </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card-price-p">18€</p>
+            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card--restaurant__price__text">18€</p>
             </div> <!-- /.card .card-price -->
             <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -242,15 +242,15 @@
 
           -->
           <div class="card-restaurant-container d-flex">
-            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
                         restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card-title-h3">Macaron au chocolat d'exception</h3>
-              <p class="card-description">
+              <h3 class="card--restaurant__title">Macaron au chocolat d'exception</h3>
+              <p class="card--restaurant__description">
                 Et glâce à la vanille de Madagascar
               </p>
             </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card-price-p">18€</p>
+            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card--restaurant__price__text">18€</p>
             </div> <!-- /.card .card-price -->
             <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -263,15 +263,15 @@
 
           -->
           <div class="card-restaurant-container card--restaurant-mrg-btm d-flex">
-            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
                         restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card-title-h3">Mousse au chocolat</h3>
-              <p class="card-description">
+              <h3 class="card--restaurant__title">Mousse au chocolat</h3>
+              <p class="card--restaurant__description">
                 Au piment d'espelette et à la truffe noire
               </p>
             </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card-price-p">23€</p>
+            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card--restaurant__price__text">23€</p>
             </div> <!-- /.card .card-price -->
             <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
