--- a/restaurants/a_la_francaise.html
+++ b/restaurants/a_la_francaise.html
@@ -29,9 +29,9 @@
     -->
     <header class="header">
       <a href="../index.html" class="header-back-a">
-        <i class="header-back-i fa-solid fa-arrow-left"></i>
+        <i class="header__back fa-solid fa-arrow-left"></i>
       </a>
-      <img class="header-img" src="../assets/logo/ohmyfood.png" />
+      <img class="header__img" src="../assets/logo/ohmyfood.png" />
     </header>
     <main>
       <!--
@@ -40,25 +40,25 @@
 
       -->
       <section class="menu">
-        <img class="section-menu-img" src="../assets/restaurants/a_la_francaise.jpg" alt="Image de nourriture" />
+        <img class="menu-card__img" src="../assets/restaurants/a_la_francaise.jpg" alt="Image de nourriture" />
         <div class="menu-container">
           <!--
 
             Restaurant title
 
           -->
-          <div class="menu-card-title-div">
-            <h2 class="menu-card-title-h2">A la française</h2>
-            <i class="menu-card-heart-icon-i fa-regular fa-heart"></i>
-          </div> <!-- ./menu-card-title-div -->
+          <div class="menu-card__title-container">
+            <h2 class="menu-card__title">A la française</h2>
+            <i class="menu-card__heart-icon fa-regular fa-heart"></i>
+          </div> <!-- ./.menu_conttainer__card-title -->
           <!--
 
               Restaurant menu category "" entrées ""
 
           -->
-          <div class="menu-card-category-div overall-restaurant-pres-margin">
+          <div class="category overall-restaurant-pres-margin">
             Entrées
-            <div class="menu-card-categ-line-div overall-restaurant-pres-margin"></div>
+            <div class="category__line overall-restaurant-pres-margin"></div>
           </div> <!-- /.menu-card-category-div -->
           <!--
 
@@ -73,17 +73,17 @@
 
           <!-- First card part -->
           <div class="card-restaurant-container d-flex">
-            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
                         restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card-title-h3">Tartare de poulpe acidulé</h3>
-              <p class="card-description">
+              <h3 class="card--restaurant__title">Tartare de poulpe acidulé</h3>
+              <p class="card--restaurant__description">
                 Aux zests d'orange
               </p>
             </div> <!-- /.card -->
 
             <!-- Second card part -->
-            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card-price-p">25€</p>
+            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card--restaurant__price__text">25€</p>
             </div> <!-- /.card .card-price -->
 
             <!-- Third card part -->
@@ -97,15 +97,15 @@
 
           -->
           <div class="card-restaurant-container d-flex">
-            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
                         restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card-title-h3">Bouchée de homard croustillant</h3>
-              <p class="card-description">
+              <h3 class="card--restaurant__title">Bouchée de homard croustillant</h3>
+              <p class="card--restaurant__description">
                 Carrote, panais, topinambour
               </p>
             </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card-price-p">35€</p>
+            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card--restaurant__price__text">35€</p>
             </div> <!-- /.card .card-price -->
             <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -117,15 +117,15 @@
 
           -->
           <div class="card-restaurant-container card--restaurant-mrg-btm d-flex">
-            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
                         restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card-title-h3">Soupe à l'oignon</h3>
-              <p class="card-description">
+              <h3 class="card--restaurant__title">Soupe à l'oignon</h3>
+              <p class="card--restaurant__description">
                 Revisitée
               </p>
             </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card-price-p">20€</p>
+            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card--restaurant__price__text">20€</p>
             </div> <!-- /.card .card-price -->
             <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -137,9 +137,9 @@
                 Restaurant menu "" plats ""
 
           -->
-          <div class="menu-card-category-div overall-restaurant-pres-margin">
+          <div class="category overall-restaurant-pres-margin">
             Plats
-            <div class="menu-card-categ-line-div overall-restaurant-pres-margin"></div>
+            <div class="category__line overall-restaurant-pres-margin"></div>
           </div> <!-- /.menu-card-category-div -->
 
           <!--
@@ -148,15 +148,15 @@
 
           -->
           <div class="card-restaurant-container d-flex">
-            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
                         restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card-title-h3">Coquilles Saint-Jacques</h3>
-              <p class="card-description">
+              <h3 class="card--restaurant__title">Coquilles Saint-Jacques</h3>
+              <p class="card--restaurant__description">
                 Accompagnées d'une purée de panais
               </p>
             </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card-price-p">25€</p>
+            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card--restaurant__price__text">25€</p>
             </div> <!-- /.card .card-price -->
             <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -169,15 +169,15 @@
 
           -->
           <div class="card-restaurant-container d-flex">
-            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
                         restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card-title-h3">Magret de canard</h3>
-              <p class="card-description">
+              <h3 class="card--restaurant__title">Magret de canard</h3>
+              <p class="card--restaurant__description">
                 Et parmentier de pommes de terres
               </p>
             </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card-price-p">35€</p>
+            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card--restaurant__price__text">35€</p>
             </div> <!-- /.card .card-price -->
             <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -190,15 +190,15 @@
 
           -->
           <div class="card-restaurant-container card--restaurant-mrg-btm d-flex">
-            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
                         restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card-title-h3">Pigeonneau d'Ile-et-Vilaine</h3>
-              <p class="card-description">
+              <h3 class="card--restaurant__title">Pigeonneau d'Ile-et-Vilaine</h3>
+              <p class="card--restaurant__description">
                 Sur son lit de gnocchis aux légumes
               </p>
             </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card-price-p">44€</p>
+            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card--restaurant__price__text">44€</p>
             </div> <!-- /.card .card-price -->
             <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -210,9 +210,9 @@
                 Restaurant menu "" desserts ""
 
           -->
-          <div class="menu-card-category-div overall-restaurant-pres-margin">
+          <div class="category overall-restaurant-pres-margin">
             Desserts
-            <div class="menu-card-categ-line-div overall-restaurant-pres-margin"></div>
+            <div class="category__line overall-restaurant-pres-margin"></div>
           </div> <!-- /.menu-card-category-div -->
 
 
@@ -222,15 +222,15 @@
 
           -->
           <div class="card-restaurant-container d-flex">
-            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
                         restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card-title-h3">Pétales de violettes glaçées</h3>
-              <p class="card-description">
+              <h3 class="card--restaurant__title">Pétales de violettes glaçées</h3>
+              <p class="card--restaurant__description">
                 Et purée de noisettes
               </p>
             </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card-price-p">18€</p>
+            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card--restaurant__price__text">18€</p>
             </div> <!-- /.card .card-price -->
             <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -243,15 +243,15 @@
 
           -->
           <div class="card-restaurant-container d-flex">
-            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
                         restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card-title-h3">Fondant au chocolat</h3>
-              <p class="card-description">
+              <h3 class="card--restaurant__title">Fondant au chocolat</h3>
+              <p class="card--restaurant__description">
                 Revisité
               </p>
             </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card-price-p">22€</p>
+            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card--restaurant__price__text">22€</p>
             </div> <!-- /.card .card-price -->
             <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
@@ -264,15 +264,15 @@
 
           -->
           <div class="card-restaurant-container card--restaurant-mrg-btm d-flex">
-            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+            <div class="card card--restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
                         restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card-title-h3">Tiramisu</h3>
-              <p class="card-description">
+              <h3 class="card--restaurant__title">Tiramisu</h3>
+              <p class="card--restaurant__description">
                 Myrtilles et pâte d'amande
               </p>
             </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card-price-p">23€</p>
+            <div class="card card--restaurant-pdg card--restaurant__price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card--restaurant__price__text">23€</p>
             </div> <!-- /.card .card-price -->
             <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
